# proggy-wallet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
backend/: app.py  main.py
backend/modules/: auth.py  entities.py  models.py  services.py  utils.py  wallet.py
backend/tests/: test_auth.py  test_utils.py  test_wallet.py
docs/: ARCHITECTURE.md  CLASS_DIAGRAM.md  DEVLOG.md  PRD.md  ROADMAP.md
docs/adr/: 01-use-fastapi-for-backend-integration.md  02-use-csv-for-initial-persistence.md  03-use-postgresql-for-persistent-storage.md
frontend/: deposit.html  index.html  login.html  menu.html  sendmoney.html  transactions.html
frontend/css/: custom.css
frontend/js/: deposit.js  login.js  menu.js  sendmoney.js  transactions.js
